2004-04-05  Jorn Baayen  <jbaayen@gnome.org>

	* README:

	Up xine version requirement to 1.0.0rc3b.

2004-04-04  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Bump version number to 0.5.2.99.

2004-04-04  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/Song.cs:

	Even better album cover matching. 

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Released 0.5.2.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-xine.c:

	Fix compilation with Gnome 2.4.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Threading cleanups.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Release 0.5.1.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* src/Makefile.am:

	Please distcheck.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:

	Updated for upcoming 0.5.1 release.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* libmuine/player-gst.c: (update_volume), (player_set_volume),
	(player_set_replaygain):

	Fix replaygain in the gst backend.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/player-xine.c: (update_volume), (player_set_volume),
	(player_set_replaygain):

	Fix replaygain in the xine backend.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Fix window visibility bug.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/PlaylistWindow.glade:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:

	Hide information menu items again for upcoming release.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* README:
	* configure.in:

	Make the xine backend the default.

2004-04-03  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	Remove db changing mutex, removes some semi-lockups seen when
	upgrading muine. Also make the changes thread and idle run
	concurrently.
